
AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = conf/gratia-probe-xrootd-transfer-cms.spec src/xrootd-transfer-cms src/gratia-probe-xrootd-transfer-cms

gratiaconfigdir = $(sysconfdir)/gratia/xrootd-transfer-cms/
dist_gratiaconfig_DATA = conf/ProbeConfig conf/SiteHostMapfile

gratiadatadir = $(datadir)/gratia/xrootd-transfer-cms/
gratiadata_SCRIPTS = src/xrootd-transfer-cms

initddir = $(sysconfdir)/init.d
initd_SCRIPTS = src/gratia-probe-xrootd-transfer-cms

